--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
 							</div>
 							<div class="form-group">
 								<label class="form-label" for="message">Messagem</label>
-								<textarea rows="5" cols="50" name="message" class="form-control" id="message" placeholder="Mensagem..." tabindex="4"
-								 required></textarea>
+								<textarea rows="5" cols="50" name="message" class="form-control" id="message" placeholder="Mensagem..."
+								 tabindex="4" required></textarea>
 							</div>
 							<div class="text-center">
 								<button type="submit" class="btn btn-start-order">Enviar</button>
