--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 			<a onclick="none()" href="#section3"><span class="label">Vantagens</span></a>
 			<a onclick="none()" href="#section4"><span class="label">Causas</span></a>
 			<a onclick="none()" href="#section5"><span class="label">Empresas</span></a>
-			<a onclick="none()" href="#section6"><span class="label">Contato</span></a>
+            <a onclick="none()" href="#section6"><span class="label">Contato</span></a>
+            <a onclick="none()" href="login.html"><span class="label">Login</span></a>
 		</div>
 	</div>
 	<nav class="cd-vertical-nav">
@@ -35,8 +36,8 @@
 			<li><a href="#section3"><span class="label">Vantagens</span></a></li>
 			<li><a href="#section4"><span class="label">Causas</span></a></li>
 			<li><a href="#section5"><span class="label">Empresas</span></a></li>
-			<li><a href="#section6"><span class="label">Contato</span></a></li>
-			
+            <li><a href="#section6"><span class="label">Contato</span></a></li>
+            <li><a href="login.html"><span id="login" class="label">Login</span></a></li>
 		</ul>
 	</nav><!-- menu vertical -->
 
@@ -46,8 +47,9 @@
 		<div class="content">
 			<h1 id="titulo-pag">Um clique pode ajudar milhares de causas urgentes<b></b></h1>
 			<a href="empresa.html" type="button" class="btn btn-primary btn-lg">Cadastro de empresas</a>
-			<a href="ongs.html" type="button" class="btn btn-secondary btn-lg">Cadastro de Ongs</a>
-		</div>
+            <a href="ongs.html" type="button" class="btn btn-secondary btn-lg">Cadastro de Ongs</a>
+            
+        </div>
 	</section><!-- pesquisa ongs -->
 
 	<section id="section2" class="cd-section">
