--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<li><a href="#section4"><span class="label">Causas</span></a></li>
 			<li><a href="#section5"><span class="label">Empresas</span></a></li>
             <li><a href="#section6"><span class="label">Contato</span></a></li>
-            <li><a href="login.html"><span id="login" class="label">Login</span></a></li>
+            <li id="liLogin"><a href="login.html"><span id="login" class="label">Login</span></a></li>
 		</ul>
 	</nav><!-- menu vertical -->
 
