--- a/login.html
+++ b/login.html
@@ -6,22 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.7/semantic.min.css" integrity="sha256-wT6CFc7EKRuf7uyVfi+MQNHUzojuHN2pSw0YWFt2K5E=" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/login.css">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
       <div class="ui raised very padded center aligned text container segment">
-        <h1 class="ui header">Log in</h1>
+        <h1 class="ui header">Login</h1>
         <br>
         <div class="field">
          <div class="ui left icon input">
         <i class="mail outline icon"></i>
-          <input type="email" name="email" placeholder="Email Address" autofocus="true">
+          <input type="email" name="email" placeholder="Email" autofocus="true">
         </div></div>
       <br>
           <div class="field">
         <div class="ui left icon input">
       <i class="lock icon"></i>
-          <input type="password" name="password" placeholder="Password">
+          <input type="password" name="password" placeholder="senha">
         </div></div>
       <br>
         
@@ -32,7 +32,7 @@
         </div></div><br> -->
       
         <div class="actions">
-          <button class=" ui large teal button" type="submit">Log in</button>
+          <button class=" ui large teal button" type="submit">Entrar</button>
         </div>
         <br>
         <p>Don't have an account? <a href="index.html"> Cadastre-se </a>
