--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
                     <img class="d-block w-100" src="imgs/dogo-01.png" alt="First slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h1 class="carouseltitle">PETS</h1>
-                        <p class="carousel">Ajude causas ligadas a Ongs de animais de estimação </p>
+                        <!-- <p class="carousel">Ajude causas ligadas a Ongs de animais de estimação </p> -->
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100" src="imgs/idosos-01.png" alt="Second slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h1 class="carouseltitle">IDOSOS</h1>
-                        <p class="carousel">Ajude causas ligadas a idosos</p>
+                        <!-- <p class="carousel">Ajude causas ligadas a idosos</p> -->
                     </div>
 
                 </div>
@@ -120,14 +120,14 @@
                     <img class="d-block w-100" src="imgs/kidsk-01.png" alt="Third slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h1 class="carouseltitle">CRIANÇAS</h1>
-                        <p class="carousel">Ajude causas ligadas as crianças</p>
+                        <!-- <p class="carousel">Ajude causas ligadas as crianças</p> -->
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100" src="imgs/florest-01.png" alt="Third slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h2 class="carouseltitle">NATUREZA</h2>
-                        <p class="carousel">Ajude causas ligadas a natureza</p>
+                        <!-- <p class="carousel">Ajude causas ligadas a natureza</p> -->
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
