--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.7/semantic.min.css" integrity="sha256-wT6CFc7EKRuf7uyVfi+MQNHUzojuHN2pSw0YWFt2K5E=" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/login.css">
+    <link rel="shortcut icon" href="./imgs/favicon.ico" />
     <title>Login</title>
 </head>
 <body>
