--- a/ongs.html
+++ b/ongs.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/empresa.css">
+    <link rel="shortcut icon" href="./imgs/favicon.ico" />
     <script src="js/empresa.js" defer></script>
     <title>Ong</title>
 </head>
